--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body{
+    background-image: url("images/back.jpg");
     margin: 0px;
 }
 
@@ -23,7 +24,7 @@ main{
     height: 39vw;
     background-color: #555555;
     position: relative;
-    box-shadow: 0px 0px 20px 2px #888888;
+    /*box-shadow: 0px 0px 20px 2px #888888;*/
     position: relative;
 }
 
@@ -155,6 +156,7 @@ img{
     color: #BBBBBB;
     font-size: 1.4vw;
     height: 1.9vw;
+    word-break: break-all;
 }
 
 .result{
@@ -164,6 +166,7 @@ img{
     position: absolute;
     right: 1vw;
     top: 9vw;
+    word-break: break-all;
 }
 
 .bu_max:hover{
